Layout issues fixed version 3.

--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -3197,6 +3197,18 @@ media all and (min-width:1100px){
     right: -50px;
   }
 }
+
+#congrats {
+    .sd-modal {
+        .close-sd-modal {
+            color: #ffffff;
+            position: absolute;
+            top: 5px;
+            right: 5px;
+        }
+    }
+}
+
 #main-content {
     .fixed-box {
         .fix-box-inner {
@@ -3292,7 +3304,7 @@ media all and (min-width:1100px){
   .register-info-box {
     width: 530px;
     min-height: 200px;
-    top: 110px;
+    top: -435px;
     left: 50%;
     margin-left: -265px;
     padding: 38px 0 53px;
